Update Lab2 with csv, forwarded port, more instructions

--- a/Lab2-Databases/Vagrantfile
+++ b/Lab2-Databases/Vagrantfile
@@ -14,6 +14,7 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.hostname = "lab2"
   config.vm.network "forwarded_port", guest: 80, host: 8080
   config.vm.network "forwarded_port", guest: 443, host: 8443
+  config.vm.network "forwarded_port", guest: 5432, host: 8543
 
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
