Add CAS section

--- a/Lab1-Intro-Web-Vagrant/Vagrantfile
+++ b/Lab1-Intro-Web-Vagrant/Vagrantfile
@@ -13,6 +13,8 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
   config.vm.box = "precise64"
   config.vm.hostname = "lab1"
   config.vm.network "forwarded_port", guest: 80, host: 8080
+  config.vm.network "forwarded_port", guest: 8081, host: 8081
+  config.vm.network "forwarded_port", guest: 8082, host: 8082
   config.vm.network "forwarded_port", guest: 443, host: 8443
 
   # The url from where the 'config.vm.box' box will be fetched if it
