--- a/Lab6-Puppet/Vagrantfile
+++ b/Lab6-Puppet/Vagrantfile
@@ -6,17 +6,17 @@ VAGRANTFILE_API_VERSION = "2"
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
-  config.vm.box_url = "/stash/nixmentors/boxes/precise64.box"
+  config.vm.box_url = "/stash/nixmentors/boxes/trusty64.box"
 
 
   config.vm.define "puppetmaster" do |puppetmaster|
-    puppetmaster.vm.box = "precise64"
+    puppetmaster.vm.box = "trusty64"
     puppetmaster.vm.hostname = "puppetmaster.local"
     puppetmaster.vm.network :private_network, ip: "192.168.1.10"
   end
 
   config.vm.define "client" do |client|
-    client.vm.box = "precise64"
+    client.vm.box = "trusty64"
     client.vm.hostname = "client.local"
     client.vm.network :private_network, ip: "192.168.1.11"
   end
