--- a/Lab5-Storage/Vagrantfile
+++ b/Lab5-Storage/Vagrantfile
@@ -1,19 +1,18 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
-VAGRANTFILE_API_VERSION = "2"
+VAGRANTFILE_API_VERSION = '2'
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
-  config.vm.define "sunosfiler1" do |v|
-    v.vm.box = "solaris-11.1"
-    v.vm.hostname = "sunosfiler1.local"
-    v.vm.network :private_network, ip: "192.168.1.11"
-    v.vm.box_url = "/stash/nixmentors/boxes/packer_solaris-11.1-amd64_virtualbox.box"
+  config.vm.define 'sunosfiler1' do |v|
+    v.vm.box = 'solaris-11.1'
+    v.vm.hostname = 'sunosfiler1.local'
+    v.vm.network :private_network, ip: '192.168.1.11'
+    v.vm.box_url = '/stash/nixmentors/boxes/packer_solaris-11.1-amd64_virtualbox.box'
     v.vm.provider :virtualbox do |vb|
       # Create a sata controller for our disks
-      vb.customize ["storagectl", :id, "--name", "SATA Controller", "--add", 'sata']
+      vb.customize ['storagectl', :id, '--name', 'SATA Controller', '--add', 'sata']
       # Create a second disk for the rpool mirror
       diskname = "/disk/trump/minerals/#{ENV['USER']}/sun-ide1.vdi"
       vb.customize ['createhd', '--filename', diskname, '--size', 8 * 1024]
@@ -21,22 +20,22 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     end
     # Create six disks for a zpool
     v.vm.provider :virtualbox do |vb|
-      ["1","2","3","4","5","6","7","8"].each do |disk|
-       diskname = "/disk/trump/minerals/#{ENV['USER']}/sun-sata#{disk}.vdi"
-       vb.customize ['createhd', '--filename', diskname, '--size', 1024]
-       vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', disk, '--device', 0, '--type', 'hdd', '--medium', diskname]
+      %w(1 2 3 4 5 6 7 8).each do |disk|
+        diskname = "/disk/trump/minerals/#{ENV['USER']}/sun-sata#{disk}.vdi"
+        vb.customize ['createhd', '--filename', diskname, '--size', 1024]
+        vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', disk, '--device', 0, '--type', 'hdd', '--medium', diskname]
       end
     end
   end
 
-  config.vm.define "sunosfiler2" do |v|
-    v.vm.box = "solaris-11.1"
-    v.vm.hostname = "sunosfiler2.local"
-    v.vm.network :private_network, ip: "192.168.1.12"
-    v.vm.box_url = "/stash/nixmentors/boxes/packer_solaris-11.1-amd64_virtualbox.box"
+  config.vm.define 'sunosfiler2' do |v|
+    v.vm.box = 'solaris-11.1'
+    v.vm.hostname = 'sunosfiler2.local'
+    v.vm.network :private_network, ip: '192.168.1.12'
+    v.vm.box_url = '/stash/nixmentors/boxes/packer_solaris-11.1-amd64_virtualbox.box'
     v.vm.provider :virtualbox do |vb|
       # Create a sata controller for our disks
-      vb.customize ["storagectl", :id, "--name", "SATA Controller", "--add", 'sata']
+      vb.customize ['storagectl', :id, '--name', 'SATA Controller', '--add', 'sata']
       # Create a second disk for the rpool mirror
       diskname = "/disk/trump/minerals/#{ENV['USER']}/sun2-ide1.vdi"
       vb.customize ['createhd', '--filename', diskname, '--size', 8 * 1024]
@@ -44,22 +43,22 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
     end
     # Create six disks for a zpool
     v.vm.provider :virtualbox do |vb|
-      ["1","2","3","4","5","6","7","8"].each do |disk|
-       diskname = "/disk/trump/minerals/#{ENV['USER']}/sun2-sata#{disk}.vdi"
-       vb.customize ['createhd', '--filename', diskname, '--size', 1024]
-       vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', disk, '--device', 0, '--type', 'hdd', '--medium', diskname]
+      %w(1 2 3 4 5 6 7 8).each do |disk|
+        diskname = "/disk/trump/minerals/#{ENV['USER']}/sun2-sata#{disk}.vdi"
+        vb.customize ['createhd', '--filename', diskname, '--size', 1024]
+        vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', disk, '--device', 0, '--type', 'hdd', '--medium', diskname]
       end
     end
   end
 
-  config.vm.define "linuxfiler" do |v|
-    v.vm.box = "precise64"
-    v.vm.hostname = "linuxfiler.local"
-    v.vm.network :private_network, ip: "192.168.1.10"
-    v.vm.box_url = "/stash/nixmentors/boxes/precise64.box"
+  config.vm.define 'linuxfiler' do |v|
+    v.vm.box = 'precise64'
+    v.vm.hostname = 'linuxfiler.local'
+    v.vm.network :private_network, ip: '192.168.1.10'
+    v.vm.box_url = '/stash/nixmentors/boxes/precise64.box'
     port = 1
     v.vm.provider :virtualbox do |vb|
-      ["b","c","d","e","f","g"].each do |disk|
+      %w(b c d e f g).each do |disk|
         diskname = "/disk/trump/minerals/#{ENV['USER']}/sd#{disk}.vdi"
         vb.customize ['createhd', '--filename', diskname, '--size', 1024]
         vb.customize ['storageattach', :id, '--storagectl', 'SATA Controller', '--port', port, '--device', 0, '--type', 'hdd', '--medium', diskname]
