--- a/Lab6-Puppet/Vagrantfile
+++ b/Lab6-Puppet/Vagrantfile
@@ -1,24 +1,22 @@
 # -*- mode: ruby -*-
 # vi: set ft=ruby :
 
-# Vagrantfile API/syntax version. Don't touch unless you know what you're doing!
-VAGRANTFILE_API_VERSION = "2"
+VAGRANTFILE_API_VERSION = '2'
 
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
-  config.vm.box_url = "/stash/nixmentors/boxes/trusty64.box"
+  config.vm.box_url = '/stash/nixmentors/boxes/trusty64.box'
 
-
-  config.vm.define "puppet" do |puppet|
-    puppetmaster.vm.box = "trusty64"
-    puppetmaster.vm.hostname = "puppet.local"
-    puppetmaster.vm.network :private_network, ip: "192.168.1.10"
+  config.vm.define 'puppet' do |puppetmaster|
+    puppetmaster.vm.box = 'trusty64'
+    puppetmaster.vm.hostname = 'puppet.local'
+    puppetmaster.vm.network :private_network, ip: '192.168.1.10'
   end
 
-  config.vm.define "client" do |client|
-    client.vm.box = "trusty64"
-    client.vm.hostname = "client.local"
-    client.vm.network :private_network, ip: "192.168.1.11"
+  config.vm.define 'client' do |client|
+    client.vm.box = 'trusty64'
+    client.vm.hostname = 'client.local'
+    client.vm.network :private_network, ip: '192.168.1.11'
   end
 
 end
