--- a/Lab1-Intro-Web-Vagrant/Vagrantfile
+++ b/Lab1-Intro-Web-Vagrant/Vagrantfile
@@ -14,4 +14,11 @@ Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
 
   config.vm.box_url = '/stash/nixmentors/boxes/precise64.box'
 
+  config.vm.provision :shell, inline: 'apt-get update'
+
+  config.vm.provision :puppet do |puppet|
+    puppet.manifest_file     = 'init.pp'
+    puppet.manifests_path    = '../puppet/manifests'
+  end
+
 end
